2005-08-15  Roland McGrath  <roland@redhat.com>

	* dwflmodtest.c (print_instance, print_inline): New functions.
	(print_func): Call print_inline.
	(options, parse_opt): Grok -i/--inlines.

2005-08-07  Roland McGrath  <roland@redhat.com>

	* dwflmodtest.c: Print function details only if -f flag is given.

2005-08-06  Ulrich Drepper  <drepper@redhat.com>

	* run-elflint-self.sh: New file.
	* Makefile.am (TESTS): Add run-elflint-self.sh.
	(EXTRA_DIST): Likewise.

	* Makefile.am: Link with statis libs if BUILD_STATIC.
	(dwflmodtest_LDADD): Also link with -ldl.

2005-08-02  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am: Add -ldl to asm_tst[1-9]_LDASS.
	* asm-tst1.c: Adjust for new asm_begin interface.  Open backend
	library first.
	* asm-tst2.c: Likewise.
	* asm-tst3.c: Likewise.
	* asm-tst4.c: Likewise.
	* asm-tst5.c: Likewise.
	* asm-tst6.c: Likewise.
	* asm-tst7.c: Likewise.
	* asm-tst8.c: Likewise.
	* asm-tst9.c: Likewise.

	* msg_tst.c: Add new error message.

2005-07-28  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am (dwflmodtest_LDADD): Add $(libebl).

2005-07-28  Roland McGrath  <roland@redhat.com>

	* dwflmodtest.c: New file, moved from ../libdwfl/ptest.c to here.
	* Makefile.am (noinst_PROGRAMS): Add dwflmodtest.
	(dwflmodtest_LDADD): New variable.
	(INCLUDES): Add -I$(top_srcdir)/libdwfl here.

2005-07-21  Ulrich Drepper  <drepper@redhat.com>

	* testfile18.bz2: New file.
	* run-elflint-test.sh: New file.
	* Makefile.am (TESTS): Add run-elflint-test.sh.
	(EXTRA_DIST): Add run-elflint-test.sh and testfile18.bz2.

2005-05-24  Ulrich Drepper  <drepper@redhat.com>

	* get-files.c (main): Use correct format specifier.

2005-05-21  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am: Add -Wextra to CFLAGS.
	* get-files.c: Remove warning this produced.
	* get-pubnames.c: Likewise.
	* newfile.c: Likewise.
	* newscn.c: Likewise.
	* scnnames.c: Likewise.
	* showptable.c: Likewise.
	* test-nlist.c: Likewise.
	* update1.c: Likewise.
	* update2.c: Likewise.