@@ -1,3 +1,7 @@
+2005-08-15  Ulrich Drepper  <drepper@redhat.com>
+
+	* run-elflint-self.sh: Don't run test if the file doesn't exist.
+
 2005-08-15  Roland McGrath  <roland@redhat.com>
 
 	* dwflmodtest.c (print_instance, print_inline): New functions.
